# clinical-intake-pipeline-project

./: .env.example  .gitignore  AGENTS.md  PROJECT.md  README.md  app.py  crush.json  pipeline.py  pyproject.toml  requirements.txt
.codewhale/: instructions.md
clinical_intake/: __init__.py  chain.py  prompts.py  schemas.py  utils.py
data/: age_demo.csv  age_demo_output.csv  output.csv  output_sample.csv  output_test.csv  sample.csv  sample_evaluate.csv  sample_evaluate_output.csv  sample_test.csv
dev/: check_chain.py  check_imports.py  check_sample.py  sample_data.py
tests/: conftest.py  test_app_helpers.py  test_chain.py  test_pipeline.py  test_prompts.py  test_schemas.py
tests/data/: test_notes.csv
